--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
 h1{
     font-size: 100px;
     font-family: 'Covered By Your Grace', cursive;
-    color: rgba(3, 150, 100, 0.3);
-    
-
-}
+    color: rgba(65, 8, 8, 0.4);
+    text-align: center;
+    padding-top: 132.8px;
+   }
