--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-  @import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Raleway:wght@100;500;600;800&family=Roboto+Mono&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Raleway:wght@100;500;600;800&family=Roboto+Mono&display=swap");
+* {
     margin: 0;
 }
-body{
+body {
     background-color: whitesmoke;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 500;
 }
-.header{
+.header {
     height: 400px;
     background-image: url("../image/coffee-bgnd.jpeg");
     background-position: center;
@@ -18,12 +18,46 @@ body{
     padding-top: 133px;
     box-sizing: border-box;
 }
-h1{
+h1 {
     font-size: 100px;
-    font-family: 'Covered By Your Grace', cursive;
+    font-family: "Covered By Your Grace", cursive;
     color: rgba(65, 8, 8, 0.4);
     text-align: center;
     /* padding-top: 132.8px; */
 
     /* margin: 132px; */
-   }
+}
+.main > ul {
+    list-style: none;
+    padding: 0;
+}
+.main li {
+    margin: 100px 0;
+    border-bottom: 1px solid #e4bb97;
+    padding-bottom: 60px;
+}
+.main li > h2 {
+    font-weight: 800px;
+    font-size: 28px;
+    background-color: #aa8eb5;
+    text-align: center;
+    text-transform: uppercase;
+}
+.main li > p {
+    color: #444;
+    font-size: 20px;
+    text-align: justify;
+    text-indent: 32px;
+    line-height: 1.5;
+    padding: 0 10px;
+}
+.main li>a{
+    color: #214e34;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding-left: 10px;
+    text-decoration: none;
+    letter-spacing: 2px;
+}
+
+
